# quotes-website

./: .gitignore  LICENSE  README.md  pyproject.toml
quoteswebsite/: __init__.py  __main__.py  constants.py
quoteswebsite/static/: quotes.js  styles.css
quoteswebsite/static/css/: Login-Form-Dark.css  Navbar.css
quoteswebsite/templates/: base.html  index.html  login.html
