[tool.poetry]
name = "quotes-website"
version = "0.1.0"
description = "A website to view quotes from the Cyber Discovery Discord Server."
authors = ["Cyber Discovery Community <triggerhappymods@cyberdiscoverycommunity.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.2.5"
flask = "^1.1.1"
Flask-Discord = "^0.1.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.6.0"
flake8-bandit = "^2"
flake8-bugbear = "^20"
flake8-import-order = "^0.18"
flake8-string-format = "^0.2.3"
flake8-tidy-imports = "^4"
flake8-todo = "^0.7"
flake8-formatter-junit-xml = "^0.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
